add remaining recipes

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1>The Only Recipes I Know</h1>
     <ul>
         <li><a href="recipes/scrambledeggs.html">Scrambled Eggs</a></li>
         <li><a href="recipes/tacos.html">Tacos</a></li>
