fix broken image links

--- a/recipes/grilledchicken.html
+++ b/recipes/grilledchicken.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Grilled Chicken</h1>
-    <img src="/img/grilledchicken.webp" alt="the tastiest grilled chicken youve ever seen">
+    <img src="../img/grilledchicken.webp" alt="the tastiest grilled chicken youve ever seen">
     <h3>Description</h3>
     <p>
         Grilled chicken is a delicious and healthy dish that is perfect for any occasion. 
