--- a/recipes/scrambledeggs.html
+++ b/recipes/scrambledeggs.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Scrambled Eggs</h1>
-    <img src="/img/scrambledeggs.jpeg" alt="delicious scrambled eggs">
+    <img src="../img/scrambledeggs.jpeg" alt="delicious scrambled eggs">
     <h3>Description:</h3>
     <p>
         Indulge in the ultimate scrambled eggs experience, a culinary masterpiece that will leave you craving more. 
