--- a/recipes/tacos.html
+++ b/recipes/tacos.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Tacos</h1>
-    <img src="/img/tacos.jpeg" alt="best tacos youve ever had">
+    <img src="../img/tacos.jpeg" alt="best tacos youve ever had">
     <h3>Description</h3>
     <p>
         Tacos are a delicious and versatile Mexican dish that can be enjoyed by people 
