add styles to html

--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="/style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>I really need to cook more...</title>
 </head>
 <body>
-    <h1>The Only Recipes I Know</h1>
-    <ul>
+    <h1 id="titles">The Only Recipes I Know</h1>
+    <ul id="indexlinks">
         <li><a href="recipes/scrambledeggs.html">Scrambled Eggs</a></li>
         <li><a href="recipes/tacos.html">Tacos</a></li>
         <li><a href="recipes/grilledchicken.html">Grilled Chicken</a></li>
