--- a/recipes/scrambledeggs.html
+++ b/recipes/scrambledeggs.html
@@ -1,24 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="../style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <h1>Scrambled Eggs</h1>
-    <img src="../img/scrambledeggs.jpeg" alt="delicious scrambled eggs">
-    <h3>Description:</h3>
-    <p>
-        Indulge in the ultimate scrambled eggs experience, a culinary masterpiece that will leave you craving more. 
-        These eggs are crafted with care, using only the finest free-range hens' eggs, 
-        boasting vibrant yolks that speak of their exceptional quality. Whisked to perfection, 
-        they cook gently in creamy butter, achieving a velvety and airy texture that melts in your mouth. 
-        Enhanced with finely chopped chives and a sprinkle of Parmesan cheese, 
-        each bite is a harmonious fusion of lightness, creaminess, and savory delight. 
-        Prepare to be captivated by the symphony of flavors in every spoonful—a truly unforgettable sensation.
-    </p>
+    <h1 id="titles">Scrambled Eggs</h1>
+    <div class="img">
+        <img src="../img/scrambledeggs.jpeg" alt="delicious scrambled eggs">
+    </div>
+        <div class="Description">
+        <h3>Description:</h3>
+        <p>
+            Indulge in the ultimate scrambled eggs experience, a culinary masterpiece that will leave you craving more. 
+            These eggs are crafted with care, using only the finest free-range hens' eggs, 
+            boasting vibrant yolks that speak of their exceptional quality. Whisked to perfection, 
+            they cook gently in creamy butter, achieving a velvety and airy texture that melts in your mouth. 
+            Enhanced with finely chopped chives and a sprinkle of Parmesan cheese, 
+            each bite is a harmonious fusion of lightness, creaminess, and savory delight. 
+            Prepare to be captivated by the symphony of flavors in every spoonful—a truly unforgettable sensation.
+        </p>
+    </div>
     <h3>Ingredients:</h3>
     <ul>
         <li>4 large eggs</li>
