--- a/recipes/grilledchicken.html
+++ b/recipes/grilledchicken.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="../style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grilled Chicken</title>
 </head>
 <body>
-    <h1>Grilled Chicken</h1>
-    <img src="../img/grilledchicken.webp" alt="the tastiest grilled chicken youve ever seen">
+    <h1 id="titles">Grilled Chicken</h1>
+    <div class="img">
+        <img src="../img/grilledchicken.webp" alt="the tastiest grilled chicken youve ever seen">
+    </div>
     <h3>Description</h3>
     <p>
         Grilled chicken is a delicious and healthy dish that is perfect for any occasion. 
