--- a/recipes/tacos.html
+++ b/recipes/tacos.html
@@ -2,13 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="../style.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <h1>Tacos</h1>
-    <img src="../img/tacos.jpeg" alt="best tacos youve ever had">
+    <h1 id="titles">Tacos</h1>
+    <div class="img">
+        <img src="../img/tacos.jpeg" alt="best tacos youve ever had">
+    </div>
     <h3>Description</h3>
     <p>
         Tacos are a delicious and versatile Mexican dish that can be enjoyed by people 
